css/styles.css
:root{
    --transition: all 300ms ease-in-out;
    --dark-color: #332e29;
    --light-color: #fff;
}

*{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    outline: 0;
}
html{
    font-size: 10px;
    scroll-behavior: smooth;
}
body{
    font-size: 1.6rem;
    font-family: 'Poppins', sans-serif;
    line-height: 1.6;
}
/* Navbar */
.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #332e29;
    color: #fff;
}

.navbar-links ul{
    margin: 0;
    padding-right: 50px;
    display: flex;
}

.navbar-links li{
    list-style: none;
}

.navbar-links li a {
    text-decoration: none;
    color: #fff;
    padding: 1rem;
    display: block;
}

.navbar-links li:hover {
background-color: #555;
}

.brand-title{
    font-size: 2.5rem;
    margin: .5rem;
    padding-left: 20px;
}

.toggle-button{
    position: absolute;
    top: .75rem;
    right: 1rem;
    display: none;
    flex-direction: column;
    justify-content: space-between;
    width: 30px;
    height: 21px;
    
}

.toggle-button .bar{
    height: 3px;
    width: 100%;
    background-color: white;
    border-radius: 10px;
}


/* Navbar END */

button, .btn{
    cursor: pointer;
    border: none;
    background: transparent;
}
ul{
    list-style-type: none;
}
a{
    text-decoration: none;
    color: var(--dark-color);
}
img{
    width: 100%;
    display: block;
}
.container{
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 2rem;
}
.vh-100{
    min-height: 100vh;
}
h1, h2, h3{
    margin-top: 0;
    line-height: 1.3;
    margin-bottom: 2rem;
    color: var(--dark-color);
}

.flex{
    display: flex;
    align-items: center;
    justify-content: center;
}
.py-7{
    padding: 7rem 0;
}
.grid{
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    gap: 1rem;
}
.lead{
    opacity: 0.8;
    padding: 1rem 0;
    font-size: 1.7rem;
    font-weight: 300;
    line-height: 1.8;
}


/* This is wear the header starts */

#header{
    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url('../images/model11-min.jpg') center/cover no-repeat fixed;
    justify-content: flex-start;
    align-items: flex-end;
}
#header .container{
    width: 100%;
}
.header-content{
    padding-bottom: 4rem;
}
.header-content h1{
    font-size: 4.5rem;
    margin-bottom: 0;
    text-transform: uppercase;
    color: var(--light-color);
}
.header-content h3{
    color: var(--light-color);
    font-weight: 300;
    letter-spacing: 4px;
    text-transform: uppercase;
    margin-top: 1.5rem;
}
.social-links{
    display: flex;
    margin-top: 3.5rem;
}
.social-links li a{
    width: 40px;
    height: 40px;
    background-color: var(--light-color);
    margin-right: 1rem;
    border-radius: .3rem;
    box-shadow: 0 0 6px 5px rgba(0, 0, 0, 0.2);
    transition: var(--transition);
}
.social-links li a:hover{
    opacity: 0.9;
}

/* about */
.about-left{
    margin-bottom: 4rem;
    height: 480px;
    overflow: hidden;
}

/* button down and title -reusable */
.btn-down{
    font-size: 3rem;
    display: inline-block;
    margin-top: 1rem;
    transition: var(--transition);
}
.btn-down:hover{
    opacity: 0.8;
    transform: translateY(5px);
}
.btn-down-white{
    color: var(--light-color);
}
.title{
    margin-bottom: 5rem;
}
.title h2{
    text-transform: uppercase;
    letter-spacing: 3px;
    font-weight: 600;
    position: relative;
}
.title h2::after{
    position: absolute;
    content: "";
    top: 120%;
    left: 0;
    width: 70px;
    height: 4px;
    background-color: var(--dark-color);
}



/* contact */
#contact{
    background-color: rgb(248, 248, 248);
}
.contact-content{
    flex-direction: column;
    align-items: stretch;
}
.contact-left{
    margin-bottom: 5rem;
}
.contact-left .lead{
    padding: 0.5rem;
}
.contact-left form{
    margin-top: 3rem;
}
.contact-left form .form-control{
    display: block;
    margin: 1.6rem 0;
    border: 2px solid rgba(0, 0, 0, 0.3);
    padding: 1rem;
    width: 100%;
}
.contact-left form .form-control::placeholder{
    font-size: 15px;
    font-family: 'Poppins', sans-serif;
}
.contact-left .btn-submit{
    padding: 1.4rem 3rem;
    font-family: 'Poppins', sans-serif;
    background-color: var(--dark-color);
    color: var(--light-color);
    margin-top: 1rem;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-size: 1.6rem;
    transition: var(--transition);
}
.contact-left .btn-submit:hover{
    background-color: #000;
}

#insta{
    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url('../images/insta-min.jpg') center/cover no-repeat fixed;
    min-height: 65vh;
}
#insta .title h2{
    color: var(--light-color);
}
#insta .title h2::after{
    background-color: var(--light-color);
}
.insta-grid > div{
    height: 400px;
    overflow: hidden;
    transition: var(--transition);
}
.insta-grid > div img{
    height: 100%;
    object-fit: cover;
}
.insta-grid > div:hover{
    transform: scale(1.1);
}

/* footer */
#footer{
    background-color: var(--dark-color);
    color: var(--light-color);
}
.footer-content{
    text-align: center;
}
.footer-content h3{
    color: var(--light-color);
    font-size: 2.5rem;
    letter-spacing: 1px;
}
.footer-content ul{
    flex-direction: column;
}
.footer-content ul li a{
    color: var(--light-color);
    font-size: 1.5rem;
    transition: var(--transition);
}
.footer-content ul li a:hover{
    opacity: 0.7;
}
.footer-content ul li{
    margin: .5rem 1rem;
}
.footer-content > div:first-child{
    margin-bottom: 3rem;
}
.footer-content > div:first-child div{
    width: 100px;
    height: 100px;
    overflow: hidden;
    margin: 5rem auto;
    border-radius: 50%;
}


/* Media Queries */

@media(min-width: 450px){
    .work-bottom{
        grid-template-columns: repeat(2, 1fr);
        column-gap: 3rem;
        row-gap: 0;
    }
}
@media(max-width:600px){
    .toggle-button{
        display:flex;
    }

    .navbar-links{
        display: none;
        width: 100%;
    }

    .navbar{
        flex-direction: column;
        align-items: flex-start;
    }
    .navbar-links ul {
        width: 100%;
        flex-direction: column;
    }
    .navbar-links li {
        text-align: center;
    }
    .navbar-links li a{
        padding: .5rem 1rem;
    }

    .navbar-links.active{
        display: flex;
    }
}

@media(min-width: 576px){
    .title h2{
        font-size: 4rem;
    }
    .work-bottom{
        grid-template-columns: repeat(4, 1fr);
    }
    .portfolio-grid{
        grid-template-columns: repeat(2, 1fr);
    }
    .portfolio-grid > div{
        height: 300px;
        overflow: hidden;
    }
    .portfolio-grid > div img{
        height: 100%;
        object-fit: cover;
    }
    .contact-left form .form-control{
        max-width: 500px;
    }
    .footer-content ul{
        flex-direction: row;
    }

}



@media(min-width: 768px){
    .header-content h1{
        font-size: 7rem;
    }
    .about-content, .work-top{
        grid-template-columns: repeat(2, 1fr);
        column-gap: 6rem;
        row-gap: 0;
    }
    .about-left{
        margin-bottom: 0;
    }
    .contact-content{
        flex-direction: row;
    }
    .contact-right{
        padding-left: 3rem;
        width: 50%;
    }
    .contact-left{
        width: 50%;
    }
    .insta-grid{
        grid-template-columns: repeat(2, 1fr);
    }
}
@media(min-width: 992px){
    .insta-grid{
        grid-template-columns: repeat(4, 1fr);
    }
    .insta-grid > div{
        height: 250px;
    }
}

@media(min-width: 1200px){
    .portfolio-grid{
        grid-template-columns: repeat(3, 1fr);
    }
    .portfolio-grid > div:nth-child(2){
        grid-column: 2 / 4;
    }
    .portfolio-grid > div:nth-child(6){
        grid-column: 1 / 3;
    }
}

